--- a/index.Html
+++ b/index.Html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Yudidifn</title>
+        <title>BELAJAR JS</title>
     </head>
     <body>
         <h1>Belaajr JS</h1>
