--- a/bab4/jsx_map_exercise.html
+++ b/bab4/jsx_map_exercise.html
@@ -29,9 +29,9 @@
 
   <script type="text/babel">
     const mahasiswas = [
-      { nama: "Yendra", umur: 16, jurusan: "Teknik Informatika" },
-      { nama: "Berkat", umur: 16, jurusan: "Sistem Informasi" },
-      { nama: "Randy", umur: 17, jurusan: "Teknik Elektro" }
+      { nama: "Yudi", umur: 16, jurusan: "Teknik Informatika" },
+      { nama: "Valen", umur: 16, jurusan: "Sistem Informasi" },
+      { nama: "Matthew", umur: 17, jurusan: "Teknik Elektro" }
     ];
 
     const myTable = (
