--- a/bab5/class_and_function_component.html
+++ b/bab5/class_and_function_component.html
@@ -17,12 +17,12 @@
     // Class Component
     class JudulReact extends React.Component {
       render() {
-        return <h1>Sedang Belajar React</h1>;
+        return <h1>Masih Belajar React</h1>;
       }
     }
 
     // Functional Component (Arrow Function)
-    const JudulJavaScript = () => <h1>Sedang Belajar JavaScript</h1>;
+    const JudulJavaScript = () => <h1>Masih Belajar JavaScript</h1>;
 
     // Komponen utama gabungan
     const MyComponent = () => {
