--- a/bab5/class_component_array.html
+++ b/bab5/class_component_array.html
@@ -18,19 +18,19 @@
     const mahasiswas = [
       {
         id: "01",
-        nama: "Eka",
+        nama: "Yudi",
         jurusan: "Teknik Informatika",
         pasFoto: "people1.jpg"
       },
       {
         id: "02",
-        nama: "Lisa",
+        nama: "Valen",
         jurusan: "Sistem Informasi",
         pasFoto: "people2.jpg"
       },
       {
         id: "03",
-        nama: "Rudi",
+        nama: "Matthew",
         jurusan: "Teknik Elektro",
         pasFoto: "people3.jpg"
       }
