--- a/bab5/class_component_menampilkan_data.html
+++ b/bab5/class_component_menampilkan_data.html
@@ -17,7 +17,7 @@
     // Data mahasiswa
     const mahasiswa = {
       id: "01",
-      nama: "Yendra",
+      nama: "Yudi",
       jurusan: "Teknik Informatika",
       pasFoto: "1.jpg"
     };
