--- a/bab5/class_component_variabel_1.html
+++ b/bab5/class_component_variabel_1.html
@@ -21,7 +21,7 @@
           <React.Fragment>
             <h1>{judulReact}</h1>
             <hr />
-            <p>Stt... lagi serius {judulReact.toLocaleLowerCase()}</p>
+            <p>Woii saya lagi serius {judulReact.toLocaleLowerCase()}</p>
           </React.Fragment>
         );
       }
