--- a/bab5/funcation_component.html
+++ b/bab5/funcation_component.html
@@ -16,12 +16,12 @@
   <script type="text/babel">
     // Komponen pertama
     function JudulReact() {
-      return <h1>Sedang Belajar React</h1>;
+      return <h1>Masih Belajar React</h1>;
     }
 
     // Komponen kedua
     function JudulJavaScript() {
-      return <h1>Sedang Belajar JavaScript</h1>;
+      return <h1>Masih Belajar JavaScript</h1>;
     }
 
     // Komponen utama
