--- a/bab5/function_component_arrow.html
+++ b/bab5/function_component_arrow.html
@@ -15,8 +15,8 @@
 
   <script type="text/babel">
     // Functional Component
-    const JudulReact = () => <h1>Sedang Belajar React</h1>;
-    const JudulJavaScript = () => <h1>Sedang Belajar JavaScript</h1>;
+    const JudulReact = () => <h1>Masih Belajar React</h1>;
+    const JudulJavaScript = () => <h1>Masih Belajar JavaScript</h1>;
 
     // Komponen utama
     const MyComponent = () => {
