--- a/bab5/function_component_mahasiswas.html
+++ b/bab5/function_component_mahasiswas.html
@@ -16,9 +16,9 @@
   <script type="text/babel">
     // Data array mahasiswa
     const mahasiswas = [
-      { id:"01", nama: "Eka", jurusan: "Teknik Informatika", pasFoto: "people1.jpg" },
-      { id:"02", nama: "Lisa", jurusan: "Sistem Informasi", pasFoto: "people2.jpg" },
-      { id:"03", nama: "Rudi", jurusan: "Teknik Elektro", pasFoto: "people3.jpg" }
+      { id:"01", nama: "Yudi", jurusan: "Teknik Informatika", pasFoto: "people1.jpg" },
+      { id:"02", nama: "Valen", jurusan: "Sistem Informasi", pasFoto: "people2.jpg" },
+      { id:"03", nama: "Matthew", jurusan: "Teknik Elektro", pasFoto: "people3.jpg" }
     ];
 
     // Komponen untuk 1 mahasiswa
