--- a/bab5/class_component.html
+++ b/bab5/class_component.html
@@ -17,7 +17,7 @@
     // Membuat class component
     class JudulReact extends React.Component {
       render() {
-        return <h1>Sedang Belajar React</h1>;
+        return <h1>Masih Belajar React</h1>;
       }
     }
 
