--- a/bab5/class_component_mahasiswas_nested.html
+++ b/bab5/class_component_mahasiswas_nested.html
@@ -16,9 +16,9 @@
   <script type="text/babel">
     // Data array mahasiswa
     const mahasiswas = [
-      { id: "01", nama: "yendra", jurusan: "Teknik Informatika", pasFoto: "people1.jpg" },
-      { id: "02", nama: "Berkat", jurusan: "Sistem Informasi", pasFoto: "people2.jpg" },
-      { id: "03", nama: "Randy", jurusan: "Teknik Elektro", pasFoto: "people4.jpg" }
+      { id: "01", nama: "Yudi", jurusan: "Teknik Informatika", pasFoto: "people1.jpg" },
+      { id: "02", nama: "Valen", jurusan: "Sistem Informasi", pasFoto: "people2.jpg" },
+      { id: "03", nama: "Matthew", jurusan: "Teknik Elektro", pasFoto: "people4.jpg" }
     ];
 
     // Komponen untuk 1 mahasiswa
